--- a/roles/argocd/defaults/main.yml
+++ b/roles/argocd/defaults/main.yml
@@ -6,5 +6,5 @@ argocd_version: 2.8.0
 argocd_url: https://raw.githubusercontent.com/argoproj/argo-cd/v{{ argocd_version }}/manifests/install.yaml
 
 repo_home_apps_url: https://github.com/emlagowski/home-apps.git
-repo_home_apps_name: home-apps
+repo_home_apps_name: app-of-apps
 repo_home_apps_path: apps
