--- a/roles/prereq/tasks/main.yml
+++ b/roles/prereq/tasks/main.yml
@@ -52,3 +52,12 @@
     path: /etc/sudoers
     validate: 'visudo -cf %s'
   when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
+
+
+- name: DHCP Set static IP address
+  template:
+    src: "dhcpcd.conf.j2"
+    dest: "/etc/dhcpcd.conf"
+    owner: root
+    group: root
+    mode: 0664
